--- a/AnimationEditor/MainWindow.xaml
+++ b/AnimationEditor/MainWindow.xaml
@@ -93,7 +93,7 @@
                        IsEnabled="{Binding IsAnimationSelected}">
                 <DockPanel DockPanel.Dock="Bottom">
                     <ListBox x:Name="FramesList" ScrollViewer.HorizontalScrollBarVisibility="Visible"
-                         ItemsSource="{Binding AnimationFrames}" SelectedIndex="{Binding SelectedFrameIndex}">
+                         ItemsSource="{Binding AnimationFrames}" SelectedIndex="{Binding SelectedFrameIndex}" MouseDoubleClick="FramesList_MouseDoubleClick">
                         <ListBox.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <VirtualizingStackPanel IsItemsHost="True" Orientation="Horizontal"/>
@@ -250,7 +250,7 @@
                                           Value="{Binding Loop, Mode=TwoWay}"/>
 
                         <TextBlock Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="3" Text="Flags"/>
-                        <ComboBox Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="5"
+                        <ComboBox x:Name="FlagsSelector" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="5"
                                   SelectedIndex="{Binding Flags, Mode=TwoWay}">
                             <TextBlock Text="Default behavior"/>
                             <TextBlock Text="Full engine rotation"/>
@@ -277,9 +277,9 @@
                             <ComboBox ItemsSource="{Binding Textures}"
                               SelectedIndex="{Binding SelectedFrameTexture, Mode=TwoWay}"/>
                             <TextBlock Margin="0 5 0 0" Text="Hitbox"/>
-                            <ComboBox ItemsSource="{Binding HitboxItems}" Visibility="{Binding HitboxV3Visibility}"
+                            <ComboBox x:Name="HitBoxComboBox" ItemsSource="{Binding HitboxItems}" Visibility="{Binding HitboxV3Visibility}"
                               SelectedIndex="{Binding SelectedFrameHitbox, Mode=TwoWay}"/>
-                            <ComboBox ItemsSource="{Binding HitboxTypes}" Visibility="{Binding HitboxV5Visibility}"
+                            <ComboBox x:Name="HitBoxComboBox2" ItemsSource="{Binding HitboxTypes}" Visibility="{Binding HitboxV5Visibility}"
                               SelectedIndex="{Binding SelectedHitboxType, Mode=TwoWay}"/>
                             <Grid Margin="3" Visibility="{Binding HitboxV5Visibility}">
                                 <Grid.ColumnDefinitions>
@@ -359,11 +359,11 @@
                                     MinimumValue="-32768" MaximumValue="32767"
                                     Value="{Binding SelectedFramePivotY, Mode=TwoWay}"/>
                                 <TextBlock Grid.Column="0" Grid.Row="7" Text="ID"/>
-                                <xc:NumericUpDown Grid.Column="1" Grid.Row="7"
+                                <xc:NumericUpDown x:Name="idNUD" Grid.Column="1" Grid.Row="7"
                                     MinimumValue="0" MaximumValue="65535"
                                     Value="{Binding SelectedFrameId, Mode=TwoWay}"/>
                                 <TextBlock Grid.Column="3" Grid.Row="7" Text="Duration"/>
-                                <xc:NumericUpDown Grid.Column="4" Grid.Row="7"
+                                <xc:NumericUpDown x:Name="DelayNUD" Grid.Column="4" Grid.Row="7"
                                     MinimumValue="0" MaximumValue="65535"
                                     Value="{Binding SelectedFrameDuration, Mode=TwoWay}"/>
 
