--- a/AnimationEditor/AboutWindow.xaml
+++ b/AnimationEditor/AboutWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnimationEditor"
         mc:Ignorable="d"
-        Title="About" Height="189.536" Width="346.481" WindowStyle="ToolWindow" SizeToContent="WidthAndHeight">
+        Title="About" Height="201.997" Width="346.481" WindowStyle="ToolWindow" SizeToContent="WidthAndHeight">
     <StackPanel Orientation="Horizontal" Margin="10">
         <Image Width="48" Source="MainIcon.ico" VerticalAlignment="Top" Margin="0 0 10 0">
             
@@ -27,6 +27,7 @@
             <TextBlock Text="thesupersonic16"/>
             <TextBlock Text="More Fixes and RSDKv1 and RSDKv2 Support by:" Width="298"/>
             <TextBlock Text="Rubberduckycooly"/>
+            <TextBlock><Hyperlink NavigateUri="https://github.com/Rubberduckycooly/RSDK"><Run Text="https://github.com/Rubberduckycooly/RSDK"/></Hyperlink></TextBlock>
         </StackPanel>
     </StackPanel>
 </Window>
